# Gtkdot

./: .gitignore  README.md  io.gitlab.vgmkr.dot.json  meson.build  shell.nix
data/: io.gitlab.vgmkr.dot.desktop.in  io.gitlab.vgmkr.dot.gschema.xml  io.gitlab.vgmkr.dot.metainfo.xml.in  io.gitlab.vgmkr.dot.service.in  meson.build
data/icons/: meson.build
demo/: application.vala  dot.vala  graph.vala  gtkdot.gresource.xml  light.vala  meson.build  simple.vala  window.vala
demo/ui/: dot.ui  graph.ui  light.ui  simple.ui  window.ui
lib/: config.vala.meson  graph.vala  interfaces.vala  layout.vala  light.vala  light_layout.vala  member.vala  meson.build  simple.vala  simple_layout.vala  simple_member.vala  test.vala  test_vapi.vala  utils.vala  widgets.vala
po/: POTFILES.in  meson.build
vapi/: libgvc.vapi
